# practice-c-c-

debugging/: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md
debugging/include/: main.h
debugging/scripts/: analyze.sh  build.sh  clean.sh  coverage.sh  docs.sh  format.sh  memcheck.sh
debugging/src/: main.c  utils.c
debugging/tests/: test_main.c
user_interfaces/: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  imgui.ini
user_interfaces/include/: diff_viewer.hpp  file_explorer.hpp  function_plotter.hpp  paint.hpp  shortcut_manager.hpp  text_editor.hpp
user_interfaces/scripts/: build.sh  clean.sh  format.sh  setup_clangd.sh
user_interfaces/src/: diff_viewer.cpp  file_explorer.cpp  function_plotter.cpp  main.cpp  paint.cpp  text_editor.cpp  window.cpp
user_interfaces/tests/: test_main.cpp
